# Edge_Based_Visual_Odometry

./: .gitignore  ACCELERATION_SUMMARY.md  CMakeLists.txt  README.md  load_modules.sh  run_tests.sh  temporal_matches.txt  valid_disparities_part_1.csv  visualize_filtering_complete.m  visualize_sift_distances.m
cmd/: CMakeLists.txt  main_VO.cpp
config/: eth3d_cable_2.yaml  eth3d_delivery_area.yaml  eth3d_electro.yaml  eth3d_playground.yaml  eth3d_terrains.yaml  euroc.yaml  euroc_v1_01.yaml  kitti.yaml
docs/: ETH3D_SLAM_FORMAT.md
include/: Dataset.h  Datasetloader.h  EBVO.h  EdgeClusterer.h  Frame.h  Matches.h  MatlabNCCComputer.h  MotionTracker.h  Pipeline.h  Stereo_Iterator.h  Stereo_Matches.h  Temporal_Matches.h  definitions.h  io.h  utility.h
include/toed/: cpu_toed.hpp
output_files/: ambiguity_BNB_NCC_frame_0.txt  ambiguity_BNB_SIFT_frame_0.txt  ambiguity_disparity_frame_0.txt  ambiguity_edge_clustering_frame_0.txt  ambiguity_epipolar_frame_0.txt  ambiguity_ncc_frame_0.txt  ambiguity_photometric_refinement_frame_0.txt  ambiguity_sift_frame_0.txt  ncc_score_frame_0.txt  sift_distance_frame_0.txt
src/: CMakeLists.txt  Dataset.cpp  Datasetloader.cpp  EBVO.cpp  EdgeClusterer.cpp  Matches.cpp  MatlabNCCComputer.cpp  MotionTracker.cpp  Pipeline.cpp  Stereo_Iterator.cpp  Stereo_Matches.cpp  Temporal_Matches.cpp  compute_ncc.m  utility.cpp
src/toed/: cpu_toed.cpp
test/: CMakeLists.txt  debug_ncc_patches.m  edges_on_imgs.m  euroc_vis.m  extract_edge_data.m  extract_epilog.py  gt.txt  interactive_edge_comparison.m  kitti_vis.m  match_debug_file.m  ncc.txt  plot_all_distributions.m  plot_debug_ep.m  plot_distribution.m  plot_distribution_left_right.m  plot_edge_count.m  plot_edge_count_distribution.m  plot_epipolar.m  plot_temporal_matches.m  prev.txt  run_visualize_veridical.m  sample.m  test.m  test_functions.cpp  test_optical_flow.cpp  test_visualize_edge_correspondences.m  test_visualize_edges.m  third_order_edges_frame_0.txt  third_order_edges_frame_1.txt  toed.txt  visualize_3d_edges.m  visualize_edge_matching.m  visualize_edges.m  visualize_kf_cf_edges.m  visualize_kf_cf_projection.m  visualize_proximity_histogram.m  visualize_stereo_matches.m  visualize_veridical_chain.m
test/ncc_debug_frame1_edge8/: candidate_scores.csv  patch_explorer.fig  patch_statistics.txt
test/test_include/: test_NCC.hpp  test_NCC_patch.hpp  test_depths_and_pose.hpp  test_third_order_edges.hpp
